# fastapi-postgres-boilerplate

./: .env-example  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
api/: __init__.py
api/v1/auth/: auth.py
api/v1/users/: __init__.py  users.py
app/controllers/: auth.py  user.py
app/models/: user.py
app/repositories/: user.py
app/schemas/extra/: token.py
app/schemas/request/: __init__.py  user.py
app/schemas/response/: user.py
core/: config.py  server.py
core/controller/: base.py
core/db/: __init__.py
core/db/mixins/: __init__.py  identifiers.py
core/fastapi/dependencies/: __init__.py  current_user.py  logging.py  permission.py
core/fastapi/middlewares/: __init__.py  session.py  sqlalchemy.py
core/repository/: base.py
core/utils/: __init__.py  validators.py
migrations/: env.py
migrations/versions/: 2024_10_11_0422_5072ae045b82_add_users_table.py
