[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kamran Abdi <kamranabdicse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.35"
alembic = "^1.13.2"
redis = "^5.0.8"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.5.2"
pyjwt = "^2.9.0"
asyncpg = "^0.29.0"
passlib = "^1.7.4"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
factory-boy = "^3.3.1"
faker = "^29.0.0"
mypy = "^1.11.2"
ruff = "^0.6.7"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false
